--- a/client/src/components/Card/Card.scss
+++ b/client/src/components/Card/Card.scss
@@ -1,7 +1,8 @@
 .card{
-  width: 280px;
+  width: 300px;
   display: flex;
   flex-direction: column;
+  position: relative;
   gap: 10px;
   margin-bottom: 50px;
 
