--- a/client/src/transaction.scss
+++ b/client/src/transaction.scss
@@ -1,15 +1,21 @@
+#tran{
+  display:flex;
+  flex-direction:column;
+  min-height: 100vh;
+}
 .App {
     padding-top: 20px;
     text-align: center;
 }
 
 .App-header {
-    background-color: #282c34;
+    background-color: #2879fe;
     padding: 2rem;
     color: white;
 }
 
-.account-container {
+
+.top-info {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -25,7 +31,7 @@
     align-items: center;
     justify-content: space-between;
     width: 100%;
-    margin-bottom: 1rem;
+    margin-bottom: 0.2rem;
     color: black;
     /* Set font color to black */
 }
@@ -40,14 +46,38 @@
     font-weight: bold;
 }
 
+.bottom-info{
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+}
+
+.token-info {
+  background-color: #001033;
+  padding: 20px;
+  width: 15%;
+  margin-bottom: 20px;
+  border-radius: 8px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.token-label {
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+
+.token-value {
+  font-size: 18px; /* Adjust the font size as needed */
+}
+
 .transaction-heading {
-    font-size: 1.5rem;
-    margin-top: 2rem;
+  margin-top: 2rem;
+  padding-left: 43%;
 }
 
 .transaction-list {
-    list-style-type: none;
-    padding: 0;
+  list-style-type: none;
+  padding: 0;
 }
 
 .transaction-item {
@@ -128,4 +158,7 @@
   .positive-value{
     color: green
   }
-  
+
+  h1{
+    padding-bottom: 40px;
+  }
